--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
-    background: beige;
-    color: white;
+    background: radial-gradient(lightsteelblue, lightgray, slategray);
+    background-size: 20px;
+    color: black;
     font-family: "Questrial";
 }
 
@@ -8,8 +9,9 @@ body {
 .main-headline2 {
     position: relative;
     z-index: 1;
-    background: linear-gradient(to bottom, black, beige, black);
-    text-shadow: 4px 5px 2px black;
+    background: radial-gradient(slategray, white, slategray);
+    background-size: 5px;
+    background-attachment: fixed;
     padding: 20px;
     text-align: center;
     border-bottom-left-radius: 20px;
@@ -17,17 +19,69 @@ body {
 }
 
 .sub-headline {
-    background: linear-gradient(white, lightgrey, white);
+    width: 65%;
+    background: radial-gradient(white, lightgrey, white);
+    background-size: 10px;
     border-radius: 20px;
     text-shadow: 0px 0px 0px white;
     color: black;
     padding: 30px;
     text-align: center;
-    border: 10px double black;
+    border: 10px double slategray;
+    opacity: 0.9;
+    margin: 0 auto;
+    transition-duration: 0.3s;
+    transition-property: background-size;
+}
+
+.sub-headline:hover {
+    background-size: 30px;
 }
 
 .main-headline2 {
     z-index: 0;
-    margin: -15px auto;
-    width: 90%;
+    margin: -25px auto;
+}
+
+.headline-text {
+    background: radial-gradient(lightgray, slategray, lightgray);
+    background-size: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    border: 10px double white;
+    opacity: 0.9;
+    transition-duration: 0.3s;
+    transition-duration: background-size;
+}
+
+.headline-text:hover {
+    background-size: 50px;
+}
+
+input {
+    width: 35%;
+    padding: 2px 2px;
+    margin: 10px 5px;
+}
+
+label,
+p,
+button {
+    background: slategray;
+    font-size: 20px;
+    padding: 10px;
+    display: block;
+    border-radius: 20px;
+    transition-duration: 2s;
+    transition-property: background;
+}
+
+label:hover,
+p:hover,
+button:hover {
+    background: darkslategray;
+}
+
+button {
+    margin: 0 0 50px 0;
 }
