--- a/assets/style.css
+++ b/assets/style.css
@@ -85,3 +85,29 @@ button:hover {
 button {
     margin: 0 0 50px 0;
 }
+
+.modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: radial-gradient(lightsteelblue, lightgrey, slategrey);
+    background-size: 20px;
+}
+
+.modal-footer {
+    padding: 15px;
+    text-align: right;
+    border-top: 10px solid #e5e5e5;
+    background: slategrey;
+}
+
+.modal-body {
+    position: relative;
+    padding: 15px;
+    background: lightsteelblue;
+}
+
+.modal-header {
+    padding: 15px;
+    border-bottom: 10px solid #e5e5e5;
+    background: lightslategray;
+}
