--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
-    background: radial-gradient(lightsteelblue, lightgray, slategray);
-    background-size: 20px;
-    color: black;
+    background: radial-gradient( lightsteelblue, lightgray, slategray);
+    background-size: 10px;
+    color: #362e2d;
     font-family: "Questrial";
 }
 
@@ -59,9 +59,16 @@ body {
 }
 
 input {
-    width: 35%;
+    width: 50%;
     padding: 2px 2px;
-    margin: 10px 5px;
+    margin: 10px 5px 20px;
+    transition-duration: 3s;
+    transition-property: box-shadow, border;
+}
+
+input:focus {
+    box-shadow: 0 0 25px 5px darkslategray;
+    border: 2px solid darkslategray;
 }
 
 label,
@@ -73,13 +80,14 @@ button {
     display: block;
     border-radius: 20px;
     transition-duration: 2s;
-    transition-property: background;
+    transition-property: background, color;
 }
 
 label:hover,
 p:hover,
 button:hover {
     background: darkslategray;
+    color: white;
 }
 
 button {
@@ -89,7 +97,7 @@ button {
 .modal-open .modal {
     overflow-x: hidden;
     overflow-y: auto;
-    background: radial-gradient(lightsteelblue, lightgrey, slategrey);
+    background: linear-gradient(to bottom right, lightsteelblue, lightgrey, slategrey);
     background-size: 20px;
 }
 
@@ -110,4 +118,41 @@ button {
     padding: 15px;
     border-bottom: 10px solid #e5e5e5;
     background: lightslategray;
+}
+
+.foot {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2000;
+    font-size: 16px;
+    padding: 10px;
+    border-radius: 20px;
+    background: slategray;
+    transition-duration: 2s;
+    opacity: 0.95;
+    transition-property: background, opacity;
+}
+
+.foot:hover {
+    background: darkslategrey;
+    opacity: 1;
+}
+
+.foot-text {
+    padding: 10px;
+}
+
+a {
+    color: darkslategrey;
+    transition-duration: 2s;
+    transition-property: color;
+}
+
+a:hover {
+    color: black;
+}
+
+#matchphoto {
+    width: 60%;
 }
